--- a/win32Example/win32Example/win32Example.vcxproj
+++ b/win32Example/win32Example/win32Example.vcxproj
@@ -139,7 +139,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="getaddrinfo.cpp" />
+    <ClCompile Include="main.cpp" />
     <ClCompile Include="wua.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="getaddrinfo.h" />
+    <ClInclude Include="wua.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
