ACEをファイルに設定する
* https://s-kita.hatenablog.com/entry/20110330/1301513379

--- a/win32Example/win32Example/win32Example.vcxproj
+++ b/win32Example/win32Example/win32Example.vcxproj
@@ -142,6 +142,7 @@
     <ClCompile Include="enumAce.cpp" />
     <ClCompile Include="getaddrinfo.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="setAce.cpp" />
     <ClCompile Include="wua.cpp" />
   </ItemGroup>
   <ItemGroup>
