--- a/win32Example/win32Example/win32Example.vcxproj.filters
+++ b/win32Example/win32Example/win32Example.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="enumAce.cpp">
       <Filter>ソース ファイル\securityDescriptor</Filter>
     </ClCompile>
+    <ClCompile Include="setAce.cpp">
+      <Filter>ソース ファイル\securityDescriptor</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="wua.h">
