--- a/win32Example/win32Example/win32Example.vcxproj
+++ b/win32Example/win32Example/win32Example.vcxproj
@@ -141,6 +141,7 @@
   <ItemGroup>
     <ClCompile Include="enumAce.cpp" />
     <ClCompile Include="getaddrinfo.cpp" />
+    <ClCompile Include="getServiceSD.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="setAce.cpp" />
     <ClCompile Include="wua.cpp" />
@@ -148,6 +149,7 @@
   <ItemGroup>
     <ClInclude Include="getaddrinfo.h" />
     <ClInclude Include="securityDescriptor.h" />
+    <ClInclude Include="service.h" />
     <ClInclude Include="wua.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
