--- a/win32Example/win32Example/win32Example.vcxproj.filters
+++ b/win32Example/win32Example/win32Example.vcxproj.filters
@@ -43,6 +43,12 @@
     <Filter Include="ヘッダー ファイル\networkparams">
       <UniqueIdentifier>{d6410ab4-baac-473f-a6df-43cea6c35af4}</UniqueIdentifier>
     </Filter>
+    <Filter Include="ソース ファイル\bluetoothapi">
+      <UniqueIdentifier>{94df569a-637f-4536-802e-ade912eabef9}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ヘッダー ファイル\bluetoothapi">
+      <UniqueIdentifier>{257749c6-5dab-4416-9d11-3aa2f50e30a9}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="wua.cpp">
@@ -66,6 +72,9 @@
     <ClCompile Include="getNetworkParams.cpp">
       <Filter>ソース ファイル\networkparams</Filter>
     </ClCompile>
+    <ClCompile Include="bluetoothapi.cpp">
+      <Filter>ソース ファイル\bluetoothapi</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="wua.h">
@@ -82,6 +91,9 @@
     </ClInclude>
     <ClInclude Include="getNetworkParams.h">
       <Filter>ヘッダー ファイル\networkparams</Filter>
+    </ClInclude>
+    <ClInclude Include="bluetoothapi.h">
+      <Filter>ヘッダー ファイル\bluetoothapi</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
