--- a/win32Example/win32Example/win32Example.vcxproj
+++ b/win32Example/win32Example/win32Example.vcxproj
@@ -146,6 +146,7 @@
     <ClCompile Include="getServiceSD.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="setAce.cpp" />
+    <ClCompile Include="wsc.cpp" />
     <ClCompile Include="wua.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -154,6 +155,7 @@
     <ClInclude Include="getNetworkParams.h" />
     <ClInclude Include="securityDescriptor.h" />
     <ClInclude Include="service.h" />
+    <ClInclude Include="wsc.h" />
     <ClInclude Include="wua.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
