--- a/win32Example/win32Example/win32Example.vcxproj
+++ b/win32Example/win32Example/win32Example.vcxproj
@@ -141,6 +141,7 @@
   <ItemGroup>
     <ClCompile Include="bluetoothapi.cpp" />
     <ClCompile Include="enumAce.cpp" />
+    <ClCompile Include="findFirstFile.cpp" />
     <ClCompile Include="getaddrinfo.cpp" />
     <ClCompile Include="getNetworkParams.cpp" />
     <ClCompile Include="getServiceSD.cpp" />
@@ -151,6 +152,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="bluetoothapi.h" />
+    <ClInclude Include="findFirstFile.h" />
     <ClInclude Include="getaddrinfo.h" />
     <ClInclude Include="getNetworkParams.h" />
     <ClInclude Include="securityDescriptor.h" />
