wlanapiのサンプル
* WLANのインターフェースを列挙する
* 参考
 * https://docs.microsoft.com/en-us/windows/win32/api/wlanapi/nf-wlanapi-wlanenuminterfaces

--- a/win32Example/win32Example/win32Example.vcxproj
+++ b/win32Example/win32Example/win32Example.vcxproj
@@ -147,6 +147,7 @@
     <ClCompile Include="getServiceSD.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="setAce.cpp" />
+    <ClCompile Include="wlanapi.cpp" />
     <ClCompile Include="wsc.cpp" />
     <ClCompile Include="wua.cpp" />
   </ItemGroup>
@@ -157,6 +158,7 @@
     <ClInclude Include="getNetworkParams.h" />
     <ClInclude Include="securityDescriptor.h" />
     <ClInclude Include="service.h" />
+    <ClInclude Include="wlanapi.h" />
     <ClInclude Include="wsc.h" />
     <ClInclude Include="wua.h" />
   </ItemGroup>
