GetOpenFileNameのサンプル
* 参考：https://docs.microsoft.com/en-us/windows/win32/api/commdlg/nf-commdlg-getopenfilenamea

--- a/win32Example/desktopExample/desktopExample.vcxproj
+++ b/win32Example/desktopExample/desktopExample.vcxproj
@@ -142,11 +142,13 @@
   <ItemGroup>
     <ClInclude Include="desktopExample.h" />
     <ClInclude Include="framework.h" />
+    <ClInclude Include="getOpenFile.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="desktopExample.cpp" />
+    <ClCompile Include="getOpenFile.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="desktopExample.rc" />
