net eventのサンプル
参考：https://docs.microsoft.com/en-us/windows/win32/fwp/displaying-net-events

--- a/win32Example/win32Example/win32Example.vcxproj
+++ b/win32Example/win32Example/win32Example.vcxproj
@@ -140,6 +140,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="bluetoothapi.cpp" />
+    <ClCompile Include="displayNetEvent.cpp" />
     <ClCompile Include="enumAce.cpp" />
     <ClCompile Include="findFirstFile.cpp" />
     <ClCompile Include="getaddrinfo.cpp" />
@@ -153,6 +154,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="bluetoothapi.h" />
+    <ClInclude Include="displayNetEvent.h" />
     <ClInclude Include="findFirstFile.h" />
     <ClInclude Include="getaddrinfo.h" />
     <ClInclude Include="getNetworkParams.h" />
