サービスの所有者の列挙

--- a/win32Example/win32Example/win32Example.vcxproj
+++ b/win32Example/win32Example/win32Example.vcxproj
@@ -143,6 +143,7 @@
     <ClCompile Include="bluetoothapi.cpp" />
     <ClCompile Include="displayNetEvent.cpp" />
     <ClCompile Include="enumAce.cpp" />
+    <ClCompile Include="enumServOwner.cpp" />
     <ClCompile Include="findFirstFile.cpp" />
     <ClCompile Include="getaddrinfo.cpp" />
     <ClCompile Include="getNetworkParams.cpp" />
@@ -157,6 +158,7 @@
   <ItemGroup>
     <ClInclude Include="bluetoothapi.h" />
     <ClInclude Include="displayNetEvent.h" />
+    <ClInclude Include="enumServOwner.h" />
     <ClInclude Include="findFirstFile.h" />
     <ClInclude Include="getaddrinfo.h" />
     <ClInclude Include="getNetworkParams.h" />
