--- a/win32Example/win32Example/win32Example.vcxproj
+++ b/win32Example/win32Example/win32Example.vcxproj
@@ -144,6 +144,7 @@
     <ClCompile Include="bluetoothapi.cpp" />
     <ClCompile Include="displayNetEvent.cpp" />
     <ClCompile Include="enumAce.cpp" />
+    <ClCompile Include="enumInstalledPrograms.cpp" />
     <ClCompile Include="enumServOwner.cpp" />
     <ClCompile Include="findFirstFile.cpp" />
     <ClCompile Include="getaddrinfo.cpp" />
@@ -161,6 +162,7 @@
     <ClInclude Include="bluetoothapi.h" />
     <ClInclude Include="displayNetEvent.h" />
     <ClInclude Include="enumServOwner.h" />
+    <ClInclude Include="enumUninstalledPrograms.h" />
     <ClInclude Include="findFirstFile.h" />
     <ClInclude Include="getaddrinfo.h" />
     <ClInclude Include="getNetworkParams.h" />
