WFPプロバイダーのインストール

--- a/win32Example/win32Example/win32Example.vcxproj
+++ b/win32Example/win32Example/win32Example.vcxproj
@@ -151,6 +151,7 @@
     <ClCompile Include="getNetworkParams.cpp" />
     <ClCompile Include="getServiceSD.cpp" />
     <ClCompile Include="httpRequest.cpp" />
+    <ClCompile Include="installProvider.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="setAce.cpp" />
     <ClCompile Include="wlanapi.cpp" />
@@ -167,6 +168,7 @@
     <ClInclude Include="getaddrinfo.h" />
     <ClInclude Include="getNetworkParams.h" />
     <ClInclude Include="httpRequest.h" />
+    <ClInclude Include="installProvider.h" />
     <ClInclude Include="securityDescriptor.h" />
     <ClInclude Include="service.h" />
     <ClInclude Include="wlanapi.h" />
